realizado o update em aulas.html

--- a/aulas.html
+++ b/aulas.html
@@ -17,10 +17,31 @@
         <a href="contato.html">CONTATO</a>
     </nav>
     <main>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/S9uPNppGsGo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <article>
+            <h2>Python</h2>
+            <p>Primeiros passos com a linguagem</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/S9uPNppGsGo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </article>
+        <article>
+            <h2>R</h2>
+            <p>Primeiros passos com a linguagem</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/x4S9rIJHqxU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </article>
+        <article>
+            <h2>C</h2>
+            <p>Primeiros passos com a linguagem</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/6mUCcsnCn08" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </article>
+        <article>
+            <h2>Java</h2>
+            <p>Primeiros passos com a linguagem</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/sTX0UEplF54" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </article>
     </main>
     <footer>
-
+        <strong>
+            produzido por lukinhas
+        </strong>
     </footer>
 </body>
 </html>
