--- a/contato.html
+++ b/contato.html
@@ -32,7 +32,9 @@
         </form>
     </main>
     <footer>
-
+        <strong>
+            produzido por lukinhas
+        </strong>
     </footer>
 </body>
 </html>
