--- a/musicas.html
+++ b/musicas.html
@@ -30,7 +30,9 @@
         </section>
     </main>
     <footer>
-
+        <strong>
+            produzido por lukinhas
+        </strong>
     </footer>
 </body>
 </html>
