--- a/planos.html
+++ b/planos.html
@@ -38,7 +38,9 @@
         </article>
     </main>
     <footer>
-        <strong>prof ajax</strong>
+        <strong>
+            produzido por lukinhas
+        </strong>
     </footer>
 </body>
 </html>
