realizado update em todas titles;

--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contato</title>
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
     <main>
         <form method="get" action="">
             <fieldset>
-                <legend>Marcar consulta</legend>
+                <legend>Entre em contato com o professor</legend>
                 <label for="nome">Nome*</label>
                 <input type="text" id="nome" name="txtnome" placeholder="Digite seu nome" required>
                 <br>
